
    Emergency interfaces

     fixes: correct display of long item names
     fixed: removed js minimalization (users got bugs and wrong behavor on some systems) until fixed
     fixes: various bug fixes

    LM EI

    - reset button and expire timer in LM EI show/hide when prop changed

    Core

    fixes: remove empty controller group when all objects are deleted

    - each set_prop call now logs what's actually changed
    - added item oid (type:group/item_id) - reserved for the future releases
    - added stop_on_critical option in config (default: yes),
       server will be restarted via safe-run if critical exception occur
    - uptime in dump and test API function, last 100 exceptions are now stored in a dump,
       dumps are now compressed with gzip

    LM PLC:

    - result function in macro api. terminate and result function accept action uuid as a param

3.0.1
    Minor release with some urgent features

    Core

    - EVA_ITEM_PARENT_GROUP variable in script ENV which contains the parent group of the item

    - cvars now can be set as global or assigned to the specified item group
        i.e. 'VAR1' - global cvar, available to the all scripts, 'group1/VAR2' - variable available
         only to scripts from group 'group1' (as 'VAR2'), 'group2/VAR2' - variable available only
         to group 'group2' (also as 'VAR2'). Used by UC scripts to let one script manage different items

    Universal Controller

    - 'update_delay' - item passive update may start with a delay to prevent multiple updates
        run simultaneously producing high system load

    UC API and uc-cmd:

    - 'clone' function in UC API and uc-cmd to clone items
    - 'clone_group' function in UC API and uc-cmd for cloning all matching items in a group
    - 'destroy_group' function destroys all items in the specified group

    Logic Manager

    - item id in LM rules match by simple mask (i.e. '*id*' or 'id*' or '*id')

3.0.0
    First public release