@@ -26,6 +26,8 @@
     LM PLC:
 
     - result function in macro api. terminate and result function accept action uuid as a param
+    - list_remote controller items return now array instead of dict
+    - on_set lm rule (status changed to 1)
 
 3.0.1
     Minor release with some urgent features
